infra/argocd/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: wsp
spec:
  type: ExternalName
  externalName: host.k3s.internal
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: wsp
spec:
  type: ExternalName
  externalName: host.k3s.internal
  ports:
    - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  namespace: wsp
spec:
  type: ExternalName
  externalName: host.k3s.internal
  ports:
    - port: 8000
